# ChimariData_Flowise

./: .dockerignore  .env.example  .gitignore  .replit  ADD_OAUTH_PROVIDERS.md  ADMIN_ENDPOINTS_IMPLEMENTATION_SUMMARY.md  ADMIN_PLATFORM_AUDIT.md  ADMIN_PLATFORM_IMPLEMENTATION_SUMMARY.md  ADMIN_PLATFORM_REVIEW_SUMMARY.md  AGENTIC_FLOW_INTEGRATION.md  AGENTS.md  ANALYSIS_TAB_FIX_SUMMARY.md  ARCHITECTURAL_INTEGRITY_REVIEW.md  AUTHENTICATION_ARTIFACTS_ANALYSIS.md  AUTHENTICATION_FIXES_APPLIED.md  AUTHENTICATION_FIXES_SUMMARY.md  AUTH_IMPLEMENTATION_CHECKLIST.md  AUTH_ISSUES_FIX_SUMMARY.md  AUTH_ISSUE_HANDOFF.md  AUTH_REGRESSION_ACTION_PLAN.md  AUTH_REGRESSION_DIAGNOSIS.md  CLAUDE.md  CLAUDE_PLAN_STEP_IMPLEMENTATION.md  CLEANUP_PLAN.md  COMPLETE_VALIDATION_GUIDE.md  COMPREHENSIVE_API_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_END_TO_END_REGRESSION_TEST_REPORT.md  COMPREHENSIVE_FIX_PLAN.md  COMPREHENSIVE_PIPELINE_AUDIT_2026_02_23.md  COMPREHENSIVE_PLATFORM_FIX_PLAN.md  COMPREHENSIVE_REGRESSION_TEST_RESULTS.md  COMPREHENSIVE_SYSTEM_TEST_REPORT.md  COPILOT_IMPLEMENTATION_AUDIT.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_ISSUES_ANALYSIS.md  CRITICAL_ISSUES_FIXED_SUMMARY.md  DATA_PROCESSING_PIPELINE_TEST_REPORT.md  DEMO_SCRIPT_2_MINUTE.md  DEPLOYMENT_GUIDE.md  DOCKER-SETUP.md  (+279 more)
.claude/: launch.json  settings.local.json
.github/: copilot-instructions.md
attached_assets/: Backend  CAPABILITY_ANALYSIS_1757721289714.md  COMPLETE_USER_JOURNEY_REPORT_1757721289715.md  ProjectResults  THREE_WORKFLOWS_ANALYSIS_REPORT_1757721379746.md  mcp-service_1757721157878.ts  test_frontend_pii.csv  (+8 more)
(+1460 files in other folders)
